test: add menu medium tests